--- a/src/styles/verify.module.scss
+++ b/src/styles/verify.module.scss
@@ -32,6 +32,8 @@
           width: 3rem;
           height: 3rem;
           border-radius: 10px;
+          text-align: center;
+          font-size: large;
         }
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
